--- a/reminder-birthday/src/index.css
+++ b/reminder-birthday/src/index.css
@@ -1,66 +1,12 @@
-/*
-=============== 
-Variables
-===============
-*/
-
-:root {
-  /* dark shades of primary color*/
-  --clr-primary-1: hsl(162, 61%, 89%);
-  --clr-primary-2: hsl(162, 60%, 78%);
-  --clr-primary-3: hsl(162, 61%, 67%);
-  --clr-primary-4: hsl(162, 61%, 57%);
-  /* primary/main color */
-  --clr-primary-5: hsl(162, 73%, 46%);
-  /* lighter shades of primary color */
-  --clr-primary-6: #1aa179;
-  --clr-primary-7: #13795b;
-  --clr-primary-8: #0d503c;
-  --clr-primary-9: #06281e;
-  /* darkest grey - used for headings */
-  --clr-grey-1: hsl(212, 33%, 89%);
-  --clr-grey-2: hsl(210, 31%, 80%);
-  --clr-grey-3: hsl(211, 27%, 70%);
-  --clr-grey-4: hsl(209, 23%, 60%);
-  /* grey used for paragraphs */
-  --clr-grey-5: hsl(210, 22%, 49%);
-  --clr-grey-6: hsl(209, 28%, 39%);
-  --clr-grey-7: hsl(209, 34%, 30%);
-  --clr-grey-8: hsl(211, 39%, 23%);
-  --clr-grey-9: hsl(209, 61%, 16%);
-  --clr-white: #fff;
-  --clr-red-dark: hsl(360, 67%, 44%);
-  --clr-red-light: hsl(360, 71%, 66%);
-  --clr-green-dark: hsl(125, 67%, 44%);
-  --clr-green-light: hsl(125, 71%, 66%);
-  --clr-black: #222;
-  --transition: all 0.3s linear;
-  --spacing: 0.1rem;
-  --radius: 0.25rem;
-  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
-  --max-width: 1170px;
-  --fixed-width: 450px;
-  --clr-pink: #f28ab2;
-}
-/*
-=============== 
-Global Styles
-===============
-*/
-
-*,
-::after,
-::before {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-pink);
-  color: var(--clr-grey-9);
+  font-family: 'Segoe UI', Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: #885569;
+  color: rgb(20, 20, 98);
   line-height: 1.5;
   font-size: 0.875rem;
 }
@@ -70,11 +16,8 @@ ul {
 a {
   text-decoration: none;
 }
-h1,
-h2,
-h3,
-h4 {
-  letter-spacing: var(--spacing);
+h1, h2, h3, h4 {
+  letter-spacing: 0.1rem;
   text-transform: capitalize;
   line-height: 1.25;
   margin-bottom: 0.75rem;
@@ -84,6 +27,7 @@ h1 {
 }
 h2 {
   font-size: 2rem;
+  color: whitesmoke;
 }
 h3 {
   font-size: 1.25rem;
@@ -93,44 +37,13 @@ h4 {
 }
 p {
   margin-bottom: 1.25rem;
-  color: var(--clr-grey-5);
+  color: rgb(93, 123, 152);
 }
-@media screen and (min-width: 800px) {
-  h1 {
-    font-size: 4rem;
-  }
-  h2 {
-    font-size: 2.5rem;
-  }
-  h3 {
-    font-size: 1.75rem;
-  }
-  h4 {
-    font-size: 1rem;
-  }
-  body {
-    font-size: 1rem;
-  }
-  h1,
-  h2,
-  h3,
-  h4 {
-    line-height: 1;
-  }
-}
-/*  global classes */
 
-/* section */
 .section {
   width: 90vw;
   margin: 0 auto;
-  max-width: var(--max-width);
-}
-
-@media screen and (min-width: 992px) {
-  .section {
-    width: 95vw;
-  }
+  max-width: 550px;
 }
 
 main {
@@ -143,16 +56,16 @@ main {
 .container {
   width: 90vw;
   margin: 5rem 0;
-  max-width: var(--fixed-width);
-  background: var(--clr-white);
-  border-radius: var(--radius);
+  max-width: 550px;
+  background: white;
   padding: 1.5rem 2rem;
-  box-shadow: var(--dark-shadow);
+  border-radius: 15px;
 }
 .container h3 {
   font-weight: normal;
   text-transform: none;
   margin-bottom: 2rem;
+  font-size: 30px;
 }
 .person {
   display: grid;
@@ -166,7 +79,6 @@ main {
   height: 75px;
   object-fit: cover;
   border-radius: 50%;
-  box-shadow: var(--light-shadow);
 }
 .person h4 {
   margin-bottom: 0.35rem;
@@ -174,18 +86,18 @@ main {
 .person p {
   margin-bottom: 0;
 }
-.container button {
-  color: var(--clr-white);
+.container button, button {
+  color: whitesmoke;
   display: block;
   width: 100%;
   border-color: transparent;
-  background: var(--clr-pink);
+  background: #885569;
   margin: 2rem auto 0 auto;
   text-transform: capitalize;
   font-size: 1.2rem;
   padding: 0.5rem 0;
-  letter-spacing: var(--spacing);
-  border-radius: var(--radius);
+  letter-spacing: 0.1rem;
+  border-radius: 20px;
   outline: 1px solid rgba(242, 138, 178, 0.8);
   cursor: pointer;
 }
